doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\extensions\greenfoot.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\bluejcore.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\bluejeditor.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\bluejext.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\AppleJavaExtensions.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\junit-4.11.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\hamcrest-core-1.3.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\bluej.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\diffutils-1.2.1.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\commons-httpclient-3.1.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\commons-codec-1.3.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\jl1.0.1.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\opencsv-2.3.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\xom-1.2.9.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\guava-17.0.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\javassist-3.18.0.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\commons-vfs2-2.0.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\httpclient-4.1.1.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\httpcore-4.1.jar;C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\httpmime-4.1.1.jar;C:\Users\Carlos\Desktop\Programacion\greenfoot\Correlon\correlon
-d
C:\Users\Carlos\Desktop\Programacion\greenfoot\Correlon\correlon\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Users\Carlos\Desktop\Carlos\Greenfoot-windows-304\greenfoot\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Carlos\Desktop\Programacion\greenfoot\Correlon\correlon\Start.java
<---- end of javadoc command ---->
Loading source file C:\Users\Carlos\Desktop\Programacion\greenfoot\Correlon\correlon\Start.java...
C:\Users\Carlos\Desktop\Programacion\greenfoot\Correlon\correlon\Start.java:15: error: <identifier> expected
           if( Greenfoot.( "a" ) ){
                         ^
1 error
